@@ -20,7 +20,6 @@
 -DcompilerVersion=17
 -Dcompiler=javac
 -Dfile.encoding=UTF-8
---illegal-access=permit
 -Xmx1024m
 -Xms512m
 -XX:+UseG1GC
